force-app/main/default/objects/ssot__ShoppingCartProductEngagement__dlm/fields/ssot__AdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdjustmentAmount__c</fullName>
    <label>Adjustment Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdjustmentAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>