force-app/main/default/objects/ssot__ShoppingCartProductEngagement__dlm/fields/ssot__DeliveryAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeliveryAmount__c</fullName>
    <label>Delivery Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeliveryAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>