force-app/main/default/objects/ssot__ShoppingCartProductEngagement__dlm/fields/ssot__EngagementType__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngagementType__c</fullName>
    <label>Engagement Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EngagementType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>