force-app/main/default/objects/ssot__ShoppingCartProductEngagement__dlm/fields/ssot__ProductColorName__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProductColorName__c</fullName>
    <label>Product Color</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProductColorName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>