force-app/main/default/objects/ssot__ShoppingCartProductEngagement__dlm/fields/ssot__ProductPrice__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProductPrice__c</fullName>
    <label>Product Price</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProductPrice</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>