force-app/main/default/objects/ssot__ShoppingCartProductEngagement__dlm/fields/ssot__ShoppingCartEngagementId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShoppingCartEngagementId__c</fullName>
    <label>Shopping Cart Engagement</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShoppingCartEngagementId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>